[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "yapm"
version = "0.2.0"
description = "Yet Another Package Manager - multi-backend package manager"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
yapm = "yapm:main"

[tool.setuptools.packages.find]
include = ["yapm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
strict = true
ignore_missing_imports = true
